# uwu_context_db

./: ARCHITECTURE.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
context-db-compressor/: Cargo.toml  README.md
context-db-compressor/src/: lib.rs
context-db-core/src/: error.rs  lib.rs  lifecycle.rs  llm.rs  pack.rs  similarity.rs  store.rs  uri.rs  zerocopy.rs
context-db-retrieve/: README.md
context-db-retrieve/src/: innovation.rs  perf.rs  retriever.rs
context-db-session/: Cargo.toml
context-db-session/src/: lib.rs
context-db-storage/: Cargo.toml  README.md
context-db-storage/src/: lib.rs  perf.rs  pg.rs  vector_index.rs
context-db-testkit/: Cargo.toml  README.md
context-db-testkit/src/: lib.rs
context-db-version/: Cargo.toml  README.md
context-db-version/src/: crdt_merge.rs  innovation.rs  lib.rs  model.rs
context-db-wiki/: Cargo.toml
crates/context-db-cdt/: Cargo.toml  README.md
crates/context-db-cdt/src/: config.rs  consolidation.rs  curriculum.rs  dpo.rs  gen_agents.rs  hybrid_retrieval.rs  lats.rs  lib.rs  metric.rs  multi_perspective.rs  pipeline.rs  policy_value.rs  preference.rs  reflection.rs  self_play.rs  self_verify.rs  skill_library.rs  storm.rs  trajectory_encoder.rs  tree_search.rs  voting.rs
crates/context-db-compressor/: Cargo.toml
crates/context-db-compressor/src/: lib.rs  queue.rs  redis_queue.rs
crates/context-db-consolidation/: Cargo.toml  README.md
crates/context-db-consolidation/src/: associative.rs  batch.rs  entanglement.rs  explainable.rs  guard.rs  halflife.rs  health.rs  lib.rs  lifecycle_execution.rs  lineage.rs  loader.rs  opportunity.rs  patcher.rs  prompt_budget.rs  quality.rs  query_plan.rs  relational_axis.rs  rif.rs  security.rs  self_consistency.rs  semantic_axis.rs  tiered_cache.rs
crates/context-db-consolidation/src/marketplace/: cap.rs  community.rs  conflict.rs  consensus.rs  crdt.rs  discovery.rs  feedback.rs  immune.rs  influence.rs  mod.rs  phylogeny.rs  publish.rs  registry.rs  types.rs  voting.rs
crates/context-db-core/: Cargo.toml  README.md
crates/context-db-core/src/: config.rs  embedding_cache.rs  embedding_migration.rs  error.rs  event.rs  event_bus.rs  event_store.rs  execution.rs  lib.rs  lifecycle.rs  llm.rs  lsh.rs  model.rs  multimodal.rs  observability.rs  pack.rs  policy.rs  policy_llm.rs  prompt.rs  rate_limiter.rs  reaction.rs  read_cache.rs  redis_backend.rs  similarity.rs  store.rs  tokenizer.rs  uri.rs  vector.rs  watch.rs  write_dedup.rs  write_security.rs  zerocopy.rs
crates/context-db-knowledge-network/: Cargo.toml  README.md
crates/context-db-knowledge-network/src/: access.rs  aggregation.rs  capability.rs  corroboration.rs  event_mesh_transport.rs  fabric.rs  governance.rs  identity.rs  intent.rs  learning.rs  lib.rs  nats.rs  persistence.rs  planner.rs  privacy.rs  semantic_graph.rs  topology.rs  transport.rs  trust.rs  types.rs
crates/context-db-llm-provider/: Cargo.toml  README.md
crates/context-db-llm-provider/src/: lib.rs
crates/context-db-marketplace/: Cargo.toml
crates/context-db-marketplace-types/: Cargo.toml  README.md
crates/context-db-marketplace-types/src/: lib.rs
crates/context-db-marketplace/src/: cap.rs  community.rs  conflict.rs  consensus.rs  crdt.rs  discovery.rs  feedback.rs  immune.rs  influence.rs  lib.rs  memetic.rs  phylogeny.rs  publish.rs  registry.rs  secure_aggregation.rs  types.rs  voting.rs
crates/context-db-nats/: Cargo.toml  README.md
crates/context-db-nats/src/: lib.rs
crates/context-db-parse/: Cargo.toml  README.md
crates/context-db-parse/src/: extractor.rs  lib.rs  semantic.rs  trajectory.rs
crates/context-db-retrieve/: Cargo.toml
crates/context-db-retrieve/benches/: intent_policy.rs
crates/context-db-retrieve/src/: associative.rs  budget.rs  cache.rs  compiler.rs  config.rs  default_intent_policy.toml  graph_rag.rs  innovation.rs  intent.rs  lib.rs  operators.rs  perf.rs  planner.rs  quality.rs  query.rs  rag.rs  retriever.rs  theory_of_mind.rs
crates/context-db-retrieve/tests/: retrieval_integration.rs
crates/context-db-session/: Cargo.toml  README.md
crates/context-db-session/src/: compressor.rs  lib.rs
crates/context-db-session/src/compressor/: tests.rs
crates/context-db-storage/: Cargo.toml  README.md
crates/context-db-storage/src/: graph.rs  lib.rs  migrations.rs  outbox.rs  perf.rs  pg.rs  pg_version.rs  sqlite.rs  sqlite_version.rs  uwu_cache_adapter.rs  vector_index.rs
crates/context-db-storage/tests/: version_contract.rs
crates/context-db-testkit/: Cargo.toml
crates/context-db-testkit/src/: lib.rs  version.rs
crates/context-db-version/: Cargo.toml
crates/context-db-version/src/: belief_revision.rs  contradiction.rs  crdt_merge.rs  innovation.rs  lib.rs  model.rs  reasoning.rs
crates/context-db-version/tests/: version_integration.rs
crates/context-db-wasm/: Cargo.toml
crates/context-db-wasm/src/: lib.rs
crates/context-db-wiki/: Cargo.toml  README.md
crates/context-db-wiki/src/: lib.rs
src/: config.rs  context.rs  error.rs  facade.rs  lib.rs  ports.rs  tests.rs  version_facade.rs
