[workspace]
members = [
    "crates/context-db-core",
    "crates/context-db-retrieve",
    "crates/context-db-version",
    "crates/context-db-session",
    "crates/context-db-parse",
    "crates/context-db-compressor",
    "crates/context-db-storage",
    "crates/context-db-wiki",
    "crates/context-db-testkit",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "1"
parking_lot = "0.12"
tokio = { version = "1", features = ["rt", "macros"] }
