[package]
name = "agent-context-db"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tenant-safe application facade for agent context-db"

[workspace]
members = [
    "crates/context-db-core",
    "crates/context-db-retrieve",
    "crates/context-db-version",
    "crates/context-db-session",
    "crates/context-db-parse",
    "crates/context-db-compressor",
    "crates/context-db-storage",
    "crates/context-db-wiki",
    "crates/context-db-testkit",
    "crates/context-db-cdt",
    "crates/context-db-marketplace",
    "crates/context-db-consolidation",
    "crates/context-db-knowledge-network",
    "crates/context-db-nats",
    "crates/context-db-llm-provider",
    "crates/context-db-wasm",
]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
aho-corasick = "1"
anyhow = "1"
arc-swap = "1"
async-trait = "0.1"
base64 = "0.22"
blake3 = "1"
cel-interpreter = "0.9"
chrono = { version = "0.4", features = ["serde"] }
criterion = "0.5"
ed25519-dalek = "2"
fs2 = "0.4"
futures = "0.3"
hex = "0.4"
hmac = "0.12"
metrics = "0.24"
moka = { version = "0.12", features = ["future"] }
parking_lot = "0.12"
proptest = "1"
rand = "0.8"
rand_distr = "0.4"
regex = "1"
reqwest = "0.12"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
smallvec = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls"] }
thiserror = "1"
tiktoken-rs = "0.6"
tokio = "1"
toml = "0.8"
tracing = "0.1"
url = "2"
uuid = "1"
wasmtime = "37.0.2"
wat = "1"
zstd = "0.13"
# Keep ecosystem crates on canonical remote git sources. Cargo.lock pins revisions.
uwu-crdt = { git = "https://github.com/StLuFa/uwu-crdt.git" }
uwu_database = { git = "https://github.com/StLuFa/uwu_database.git", rev = "ce2fad2", default-features = false }
uwu_event_mesh = { git = "https://github.com/StLuFa/uwu_event_mesh.git" }
uwu_nats_bridge = { git = "https://github.com/StLuFa/uwu_nats_bridge.git" }
uwu_visual_script = { git = "https://github.com/StLuFa/uwu_visual_script.git", rev = "25e021618297f8a5453c7a649ed4d5b226cac35e" }
uwu_wasm = { git = "https://github.com/StLuFa/uwu_wasm.git" }
wiki-core = { git = "https://github.com/StLuFa/uwu_wiki.git" }

[dependencies]
agent-context-db-core = { path = "crates/context-db-core" }
agent-context-db-retrieve = { path = "crates/context-db-retrieve" }
agent-context-db-version = { path = "crates/context-db-version" }
agent-context-db-storage = { path = "crates/context-db-storage" }
agent-context-db-consolidation = { path = "crates/context-db-consolidation" }
agent-context-db-wasm = { path = "crates/context-db-wasm" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
agent-context-db-testkit = { path = "crates/context-db-testkit" }
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
