[package]
name = "agent-context-db-version"
version = "0.1.0"
edition = "2024"
description = "agent-context-db M2 版本层：Commit/Branch/Tag DAG 模型 + VersionStore 端口（feature 可关，M0/M1 不受影响）"

[dependencies]
agent-context-db-core = { path = "../context-db-core" }
uwu-crdt = { path = "../../uwu_crdt" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "1"

[features]
default = []

[dev-dependencies]
agent-context-db-testkit = { path = "../context-db-testkit" }
tokio = { version = "1", features = ["rt", "macros"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4" }
