[package]
name = "agent-context-db-consolidation"
version = "0.0.0"
edition = "2024"
description = "context-db — 高级学习巩固模块：迭代自精炼 + 四操作 + 双时序 + 反向进化 + 单Agent十大创新"

[dependencies]
agent-context-db-core = { path = "../context-db-core" }
agent-context-db-marketplace = { path = "../context-db-marketplace" }
agent-context-db-knowledge-network = { path = "../context-db-knowledge-network" }
agent-context-db-retrieve = { path = "../context-db-retrieve" }
agent-context-db-version = { path = "../context-db-version" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["sync", "time", "rt"] }
moka = { version = "0.12", features = ["future"] }
blake3 = "1"
tracing = "0.1"

[features]
default = []

[dev-dependencies]
agent-context-db-testkit = { path = "../context-db-testkit" }
tokio = { version = "1", features = ["rt", "macros"] }
