[package]
name = "agent-context-db-core"
version = "0.1.0"
edition = "2024"
description = "agent-context-db M0 内核：uwu:// URI + 核心类型 + FsOps/ContentRepo/VersionOps/TenantOps 窄端口（零实现，无 uwu 依赖）"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "1"
parking_lot = "0.12"

[features]
default = []
