[package]
name = "agent-context-db-core"
version = "0.0.0"
edition = "2024"
description = "agent-context-db 内核：uwu:// URI + 核心类型 + FsOps/ContentRepo/VersionOps/TenantOps 窄端口（零实现，无 uwu 依赖）"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "1"
parking_lot = "0.12"
tokio = { version = "1", features = ["sync"] }
moka = { version = "0.12", features = ["future"] }
metrics = "0.23"
arc-swap = { workspace = true }
redis = { version = "0.25", features = ["aio", "tokio-comp", "streams"], optional = true }
rmp-serde = { version = "1", optional = true }
uwu_event_mesh = { workspace = true }

[dev-dependencies]
proptest = "1"

[features]
default = []
redis-backend = ["dep:redis"]
