[package]
name = "agent-context-db-core"
version = "0.0.0"
edition = "2024"
description = "agent-context-db 内核：uwu:// URI + 核心类型 + FsOps/ContentRepo/VersionOps/TenantOps 窄端口（零实现，无 uwu 依赖）"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid = { workspace = true, features = ["v4", "v7", "serde"] }
chrono.workspace = true
async-trait.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["sync"] }
moka.workspace = true
metrics.workspace = true
metrics-exporter-prometheus = "0.15"
arc-swap.workspace = true
blake3.workspace = true
tiktoken-rs.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
base64.workspace = true
redis = { version = "0.25", features = ["aio", "tokio-comp", "streams"], optional = true }
rmp-serde = { workspace = true, optional = true }
uwu_event_mesh = { workspace = true }

[dev-dependencies]
proptest = "1"

[features]
default = []
redis-backend = ["dep:redis"]
