[package]
name = "agent-context-db-llm-provider"
version = "0.0.0"
edition = "2024"
description = "HTTP LLM providers for agent-context-db: OpenAI, Anthropic, and OpenAI-compatible/self-hosted endpoints"

[dependencies]
agent-context-db-core = { path = "../context-db-core" }
async-trait.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
base64.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "net", "io-util"] }
