[package]
name = "agent-context-db-marketplace-types"
version = "0.0.0"
edition = "2024"
description = "Shared marketplace and federated discovery DTOs for context-db"

[dependencies]
agent-context-db-core = { path = "../context-db-core" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
