[package]
name = "agent-context-db-marketplace"
version = "0.0.0"
edition = "2024"
description = "context-db — Agent-to-Agent knowledge marketplace: publish gate / discovery / federated registry / reputation / social voting / CRDT merge / immune protocol"

[dependencies]
agent-context-db-core = { path = "../context-db-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["sync", "time", "rt"] }
blake3 = "1"
tracing = "0.1"

[features]
default = []

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
