[package]
name = "agent-context-db-nats"
version = "0.0.0"
edition = "2024"
description = "context-db NATS 桥接：通过 uwu_nats_bridge 将本地 EventMesh 事件跨进程转发到 NATS/JetStream"

[dependencies]
agent-context-db-core = { path = "../context-db-core" }
uwu_event_mesh = { workspace = true }
uwu_nats_bridge = { workspace = true }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "macros", "sync"] }
tracing = "0.1"
