[package]
name = "agent-context-db-nats"
version = "0.0.0"
edition = "2024"
description = "context-db NATS 桥接：通过 uwu_nats_bridge 将本地 EventMesh 事件跨进程转发到 NATS/JetStream"

[dependencies]
agent-context-db-core = { path = "../context-db-core" }
uwu_event_mesh = { workspace = true }
uwu_nats_bridge = { workspace = true }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
tracing = "0.1"
chrono = { workspace = true }
ed25519-dalek = "2"
hex = "0.4"
futures = "0.3"
blake3 = "1"
uuid = { workspace = true }
url = "2"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono"] }
