[package]
name = "agent-context-db-parse"
version = "0.0.0"
edition = "2024"
description = "agent-context-db L5 解析层：SemanticProcessor + MemoryExtractor(8类) + TrajectoryExtractor 端口"

[dependencies]
agent-context-db-core = { path = "../context-db-core" }
serde.workspace = true
serde_json.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
chrono.workspace = true
async-trait.workspace = true
blake3.workspace = true
moka.workspace = true

[features]
default = []

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
