[package]
name = "agent-context-db-retrieve"
version = "0.0.0"
edition = "2024"
description = "agent-context-db M1 检索层：HierarchicalRetriever + IntentAnalyzer + Reranker 端口（仅依赖 core FsOps）"

[dependencies]
agent-context-db-core = { path = "../context-db-core" }
aho-corasick = "1"
arc-swap = { workspace = true }
async-trait = "0.1"
chrono = { version = "0.4" }
parking_lot = "0.12"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
tokio = { version = "1", features = ["sync", "rt"] }
toml = "0.8"
tracing = "0.1"

[features]
default = []

[dev-dependencies]
agent-context-db-testkit = { path = "../context-db-testkit" }
criterion = "0.5"
tokio = { version = "1", features = ["rt", "macros"] }
uuid = { version = "1", features = ["v4"] }

[[bench]]
name = "intent_policy"
harness = false
