[package]
name = "agent-context-db-session"
version = "0.0.0"
edition = "2024"
description = "agent-context-db L4 会话层：两阶段 commit SessionCompressor 端口 + 会话/记忆差异模型"

[dependencies]
agent-context-db-core = { path = "../context-db-core" }
agent-context-db-parse = { path = "../context-db-parse" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
parking_lot = "0.12"
zstd = "0.13"
base64 = "0.22"

[features]
default = []

[dev-dependencies]
agent-context-db-testkit = { path = "../context-db-testkit" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
