[package]
name = "agent-context-db-session"
version = "0.0.0"
edition = "2024"
description = "agent-context-db L4 会话层：两阶段 commit SessionCompressor 端口 + 会话/记忆差异模型"

[dependencies]
agent-context-db-core = { path = "../context-db-core" }
agent-context-db-parse = { path = "../context-db-parse" }
serde.workspace = true
serde_json.workspace = true
uuid = { workspace = true, features = ["v4", "v5", "serde"] }
chrono.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
zstd.workspace = true
base64.workspace = true

[features]
default = []

[dev-dependencies]
agent-context-db-testkit = { path = "../context-db-testkit" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
