[package]
name = "agent-context-db-storage"
version = "0.0.0"
edition = "2024"
description = "agent-context-db L7 存储层：SQLite/PostgreSQL 内容适配器、向量索引适配器与服务装配根"

[dependencies]
agent-context-db-core = { path = "../context-db-core" }
agent-context-db-version = { path = "../context-db-version" }
uwu_database = {
    workspace = true,
    features = [
        "postgres",
        "sqlite",
        "cache-memory",
        "community",
        "vector-memory",
        "vector-qdrant-edge",
    ],
}
uwu-crdt = { workspace = true }
cel-interpreter = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
parking_lot = "0.12"
blake3 = "1"
zstd = "0.13"
tracing = "0.1"
tokio = { version = "1", features = ["sync", "time"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "sqlite", "macros", "chrono", "uuid", "json"] }

[features]
default = []

[dev-dependencies]
agent-context-db-testkit = { path = "../context-db-testkit" }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
