[package]
name = "agent-context-db-version"
version = "0.0.0"
edition = "2024"
description = "agent-context-db M2 版本层：Commit/Branch/Tag DAG 模型 + VersionStore 端口（feature 可关，M0/M1 不受影响）"

[dependencies]
agent-context-db-core = { path = "../context-db-core" }
uwu-crdt.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
chrono.workspace = true
async-trait.workspace = true
thiserror.workspace = true

[features]
default = []

[dev-dependencies]
agent-context-db-testkit = { path = "../context-db-testkit" }
tokio = { version = "1", features = ["rt", "macros"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4" }
