[package]
name = "agent-context-db-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Policy-gated, tenant-isolated WebAssembly execution for context-db"

[dependencies]
agent-context-db-core = { path = "../context-db-core" }
uwu_wasm = { workspace = true }
wasmtime = "37.0.2"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
parking_lot = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
wat = "1"
